force-app/main/default/objects/Commission_Payout__c/Commission_Payout__c.object-meta.xml
<CustomObject>
    <label>Commission Payout</label>
    <nameField>
        <displayFormat>CPY-{YY}-{MM}-{000}</displayFormat>
        <label>Payout Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>