force-app/main/default/objects/Commission_Payout__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Payouts</relationshipLabel>
    <relationshipName>Commission_Payouts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>