force-app/main/default/objects/Commission_Payout__c/fields/Entry_Count__c.field-meta.xml
<CustomField>
    <fullName>Entry_Count__c</fullName>
    <label>Entry Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>