force-app/main/default/objects/Commission_Payout__c/fields/Gross_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Commission__c</fullName>
    <label>Gross Commission Total</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>