force-app/main/default/objects/Commission_Payout__c/fields/GST_Total__c.field-meta.xml
<CustomField>
    <fullName>GST_Total__c</fullName>
    <label>GST Total</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>