force-app/main/default/objects/Commission_Payout__c/fields/Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable__c</fullName>
    <formula>Gross_Commission__c + GST_Total__c - TDS_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payable Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>