force-app/main/default/objects/Commission_Payout__c/fields/Payment_UTR__c.field-meta.xml
<CustomField>
    <fullName>Payment_UTR__c</fullName>
    <label>Payment UTR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>