force-app/main/default/objects/Commission_Payout__c/fields/Payout_Month__c.field-meta.xml
<CustomField>
    <fullName>Payout_Month__c</fullName>
    <label>Payout Month</label>
    <length>7</length>
    <type>Text</type>
</CustomField>