force-app/main/default/objects/Commission_Payout__c/fields/Statement_PDF_Id__c.field-meta.xml
<CustomField>
    <fullName>Statement_PDF_Id__c</fullName>
    <label>Statement PDF Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>