force-app/main/default/objects/Commission_Payout__c/fields/TDS_Total__c.field-meta.xml
<CustomField>
    <fullName>TDS_Total__c</fullName>
    <label>TDS Total</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>